<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="@drawable/ic_wave"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@+id/view"/>


    <ImageButton
        android:id="@+id/backB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:letterSpacing="0.025"
        android:text="Criar conta"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  <!--  <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:focusable="false"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="71dp" />-->

    <!--<ScrollView
        android:id="@+id/scroll_feed"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="70dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbars="none"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="70dp">
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="320dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nome"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Email:  "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_email"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item1"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Password: "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_password"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tamanho"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Confirmar Password: "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_password2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>


<!--    </ScrollView>-->

<!--    <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:focusable="false"/>-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="650dp"
        android:background="@color/gray"
        android:focusable="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="650dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Sign Up" />

    </LinearLayout>


    <!-- </LinearLayout>-->
</RelativeLayout>