...
            <Button
                android:id="@+id/signup"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="onClick"
                android:text="Sign up" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></TextView>
...
