...
                android:layout_height="221dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:padding="20dp"
                    android:id="@+id/Condutor"
                    android:layout_width="234dp"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:clickable="true"
                    android:elevation="12dp"
                    android:focusable="true"
...
